Add new API modules - Products controller and Categories controller with L5-Swagger integration
